--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -53,7 +53,7 @@ jobs:
 
   build-arm64:
     name: Build ARM64 (aarch64)
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
     strategy:
       fail-fast: false
       matrix:
@@ -65,45 +65,34 @@ jobs:
         with:
           submodules: recursive
 
-      - name: Run Build in ARM64 Container
-        uses: uraimo/run-on-arch-action@v2
-        id: build
-        with:
-          arch: aarch64
-          distro: ubuntu22.04
+      - name: Install System Dependencies (OpenMPI)
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential openmpi-bin libopenmpi-dev
 
-          install: |
-            apt-get update -q -y
-            apt-get install -q -y build-essential openmpi-bin libopenmpi-dev curl git ca-certificates file
+      - name: Prepare Toolchain (CMake)
+        run: |
+          chmod +x ./toolchain.sh
 
-          run: |
-            export CFLAGS="-O0 -g"
-            export CXXFLAGS="-O0 -g"
+          ./toolchain.sh $(pwd)/toolchain 3.29.9 linux-aarch64
 
-            chmod +x ./toolchain.sh
-            ./toolchain.sh $(pwd)/toolchain 3.29.9 linux-aarch64
+          if [ ! -f env.sh ]; then
+            echo "Error: env.sh was not generated."
+            exit 1
+          fi
 
-            if [ ! -f env.sh ]; then echo "env.sh missing"; exit 1; fi
-            . ./env.sh
+      - name: Build HemePure (${{ matrix.variant == '' && 'Default' || matrix.variant }})
+        run: |
+          chmod +x ./FullBuild.sh
 
-            echo "Checking CMake Architecture:"
-            file $(which cmake)
-            cmake --version
+          . ./env.sh
 
-            chmod +x ./FullBuild.sh
+          echo "Checking Architecture:"
+          uname -m
+          cmake --version
 
-            echo "Patching FullBuild.sh for QEMU stability..."
-
-            sed -i 's/Release/Debug/g' FullBuild.sh
-
-            sed -i 's/-j//g' FullBuild.sh
-
-            cat FullBuild.sh | grep "cmake"
-
-            VARIANT="${{ matrix.variant }}"
-
-            if [ -z "$VARIANT" ]; then
-              ./FullBuild.sh
-            else
-              ./FullBuild.sh "$VARIANT"
-            fi
+          if [ -z "${{ matrix.variant }}" ]; then
+            ./FullBuild.sh
+          else
+            ./FullBuild.sh "${{ matrix.variant }}"
+          fi
